# CNN-In-CPP

./: CMakeLists.txt  README.md  cnn_output.txt  mlp_output.txt  terminal.txt
include/: cnn.hpp  evaluate.hpp  evaluate_mlp.hpp  mlp.hpp
src/: cnn.cpp  cnn_main.cpp  evaluate.cpp  evaluate_main.cpp  evaluate_mlp_main.cpp  mlp.cpp  mlp_main.cpp
